--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlmodel = "^0.0.8"
 asyncpg = "^0.28.0"
 jinja2 = "^3.1.2"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
+fastapi-htmx = "^0.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
